<resources>
    <string name="app_name">TriviaApp</string>
    <string name="first_wrong_answer">First Wrong Answer</string>
    <string name="enter_question_here">Enter Question Here</string>
    <string name="second_wrong_answer">Second Wrong Answer</string>
    <string name="correct_answer_goes_here">Correct Answer Goes Here</string>
    <string name="third_wrong_answer">Third Wrong Answer</string>
    <string name="save_question">Save Question</string>
    <string name="add_question">Add Question</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="delete_quiz">Delete Quiz</string>
    <string name="question">Question</string>
    <string name="answer_2">Answer #2</string>
    <string name="answer_1">Answer #1</string>
    <string name="answer_3">Answer #3</string>
    <string name="answer_4">Answer #4</string>
    <string name="next">Next</string>
    <string name="wrong_answer_text">Wrong! The correct answer is %1$s!</string>
    <string name="correct">Correct!</string>
    <string name="number_of_correct_answers">You answered %1$d questions correct!</string>
    <string name="confirmation_message">Are you sure you want to delete this Quiz?</string>
</resources>
