<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true">

    <EditText
        android:id="@+id/create_question_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_question_here"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:text="Question"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/background_light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_wrong_answer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/first_wrong_answer"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/second_wrong_answer_edittext"
        app:layout_constraintEnd_toEndOf="@+id/second_wrong_answer_edittext"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/second_wrong_answer_edittext"
        app:layout_constraintTop_toBottomOf="@+id/correct_asnwer_edittext" />

    <EditText
        android:id="@+id/second_wrong_answer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/second_wrong_answer"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/third_wrong_answer_edittext"
        app:layout_constraintEnd_toEndOf="@+id/third_wrong_answer_edittext"
        app:layout_constraintStart_toStartOf="@+id/third_wrong_answer_edittext"
        app:layout_constraintTop_toBottomOf="@+id/first_wrong_answer_edittext" />

    <EditText
        android:id="@+id/correct_asnwer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/correct_answer_goes_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/first_wrong_answer_edittext"
        app:layout_constraintEnd_toEndOf="@+id/first_wrong_answer_edittext"
        app:layout_constraintStart_toStartOf="@+id/first_wrong_answer_edittext"
        app:layout_constraintTop_toBottomOf="@+id/create_question_edittext" />

    <EditText
        android:id="@+id/third_wrong_answer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/third_wrong_answer"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/save_question_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_wrong_answer_edittext" />

    <Button
        android:id="@+id/save_question_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@android:color/background_light"
        android:fontFamily="monospace"
        android:text="@string/save_question"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>